manifests/test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs
  labels:
    app: test-nodejs
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
  selector:
    app: test-nodejs
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-nodejs-deployment
  labels:
    app: test-nodejs
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test-nodejs
    spec:
      containers:
        - image: TEST_NODEJS_IMAGE_NAME
          imagePullPolicy: Always
          name: test-nodejs
          ports:
            - containerPort: 8080
